--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <img class="avatar" src="https://tva3.sinaimg.cn/crop.0.0.180.180.180/6daf93f7jw1e8qgp5bmzyj2050050aa8.jpg?Expires=1563212960&amp;ssig=mZzkpeWfRy&amp;KID=imgbed,tva" />
 </a>
 <div class="author">
-    <span>rplees 浙ICP备19033301号-2</span>
+    <span>rplees</span>
 </div>
 
 <div class="icon">
@@ -452,7 +452,7 @@ nohup /usr/bin/ssserver -c /etc/shadowsocks.json</code></pre>
 
     </div>
     <div class="copyright">
-        <p class="footer-entry">©2016-2021 rplees.com 浙ICP备19033301号-2</p>
+        <p class="footer-entry">©2016-2021 rplees.com <a class="text-color" href="https://beian.miit.gov.cn" target="_blank">浙ICP备19033301号-2</a></p>
 <p class="footer-entry">Built with <a href="https://hexo.io/" target="_blank">Hexo</a> and <a href="https://github.com/yelog/hexo-theme-3-hexo" target="_blank">3-hexo</a> theme</p>
 
     </div>
